Fix alignment for contact page text

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -61,9 +61,7 @@ nav a:hover, nav a:visited {
   border: 1px solid #888;
   margin: -66px 0 5px 0;
 }
-.bio ul {
-	margin-left: 28px;
-}
+
 .bio ul li {
 	margin-bottom: 4px;
 }
